--- a/Serigramall.Web.Client/index.html
+++ b/Serigramall.Web.Client/index.html
@@ -7,7 +7,9 @@
     <title>Serigramall</title>
   </head>
   <body>
-    <div id="root"></div>
+    <script src="https://cdn.auth0.com/js/auth0/9.11/auth0.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
+    
+    <div id="root"></div>
   </body>
 </html>
