--- a/Serigramall.Web.Provider/index.html
+++ b/Serigramall.Web.Provider/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://cdn.auth0.com/js/auth0/9.18/auth0.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
